--- a/mybonds/templates/beacon/sysparms.html
+++ b/mybonds/templates/beacon/sysparms.html
@@ -8,7 +8,7 @@
       <div class="tabbable tabs-left span9"> <!-- Only required for left/right tabs -->
         <ul class="nav nav-tabs">
           <li class="active"><a href="#tab1" data-toggle="tab">系统参数信息</a></li>
-          <li><a href="#tab2" data-target='#tab2'  data-toggle="tab"></a>模板参数信息</li>
+          <li><a href="#tab2" data-target='#tab2'  data-toggle="tab">模板参数信息</a></li>
         </ul>
 
         <div class="tab-content "> 
@@ -34,7 +34,7 @@
                 <input type="text" id="appid" name="appid" placeholder="应用类别"  value="{{sysparmsobj.appid}}" >
                 </div>
               </div>
-              
+
               <div class="control-group">
                 <label class="control-label" for="backend_domain">后台域名地址</label>
                 <div class="controls">  
